# robot_mai

./: .gitignore  .gitmodules  readme.md
code/: CMakeLists.txt  Dockerfile  detector.cpp  detector.h  drink_control.h  main.cpp  order_manager.cpp  order_manager.h  robot.cpp  robot.h  robot_control.cpp  robot_control.h  robot_mqtt.cpp  robot_mqtt.h
kos-abot/: CMakeLists.txt  LICENSE.txt  README.md
kos-abot/communication/: CMakeLists.txt
kos-abot/communication/src/: controller.cpp  message_sender.cpp  message_validator.h  subscriber.cpp
kos-abot/configuration_server/: CMakeLists.txt
kos-abot/configuration_server/src/: server.c
kos-abot/einit/: CMakeLists.txt
kos-abot/einit/src/: security.psl  trusted.psl.old
kos-abot/navigation/src/: navigation.h  pwm_controller.h
kos-abot/resources/configuration/: Configuration.cdl  Configuration.idl  ConfigurationServer.edl
kos-abot/resources/navigation/: NavigationCommand.idl
src/: readme.md
src/control/: CMakeLists.txt  Dockerfile  detector.cpp  detector.h  drink_control.cpp  drink_control.h  main.cpp  order_manager.cpp  order_manager.h  robot.cpp  robot.h  robot_control.cpp  robot_control.h  robot_mqtt.cpp  robot_mqtt.h
src/kos-abot/: README.RU.md  build-n-write.sh  image-build
src/kos-abot/communication/src/: message_sender.h  message_validator.cpp  subscriber.h
src/kos-abot/einit/src/: init.yaml.in  security.psl.old  trusted.psl
src/kos-abot/navigation/: CMakeLists.txt
src/kos-abot/navigation/src/: controller.cpp  navigation.cpp  pwm_controller.cpp
src/kos-abot/resources/navigation/: NavigationCommand.cdl  NavigationController.edl
src/kos-abot/resources/ramfs/etc/: dhcpcd.conf
src/telegram_bot/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  main.cpp
test_2/: CMakeLists.txt  main2.cpp
